Fix flash message responsiveness on small screens

--- a/static/css/media.css
+++ b/static/css/media.css
@@ -11,5 +11,8 @@
         margin: 0;
 	}
  
+	.message {
+		margin-left: -90px;
+	}
     
 }
